# turnzero

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FAQ.md  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/hooks/: load-project-memory.py
.cursor/: mcp.json.example
.cursor/rules/: turnzero.mdc
.github/workflows/: publish.yml
data/: index.jsonl  index_community.jsonl  index_local.jsonl
data/blocks/: docker-multistage-build.yaml  fastapi-async-build.yaml  fastapi-pydantic-v2-migrate.yaml  fastapi-pydantic-v2-migration-build.yaml  fastapi-websockets-build.yaml  flask-sqlalchemy-build.yaml  go-http-build.yaml  langchain-memory-build.yaml  langchain-tools-build.yaml  nextjs-15-app-router-fetch-data.yaml  nextjs-approuter-migrate.yaml  nextjs15-approuter-build-version-16-0-0.yaml  nextjs15-approuter-build.yaml  postgresql-ha-review.yaml  postgresql-indexing-review.yaml  postgresql-jsonb-debug.yaml  postgresql-security-review.yaml  python-3-12-build-rich.yaml  python-3-12-migrate-ruff.yaml  react-native-navigation-build.yaml  rest-api-auth-review.yaml  rest-api-design-review.yaml  rest-api-rate-limiting-build.yaml  rest-api-versioning-migrate.yaml  security-credential-rotation-debug.yaml  security-supply-chain-review.yaml  security-webapp-harden-build.yaml  stripe-subscriptions-build.yaml  supabase-storage-build.yaml  typescript-generics-debug.yaml  typescript-performance-review.yaml  typescript-strict-build.yaml
docs/: cursor-setup.md  hook-setup.md
tests/: negatives.json  test_affinity.py  test_blocks.py  test_cli.py  test_embed.py  test_harvest.py  test_integration.py  test_mcp_server.py  test_package_data.py  test_personal_priors.py  test_precision.py  test_rationale.py  test_retrieval.py  test_runtime_contract.py  test_setup.py  validation_set.json  validation_set_multilingual.json
turnzero/: __init__.py  __main__.py  analytics.py  blocks.py  cli.py  config.py  embed.py  harvest.py  index.py  mcp_server.py  retrieval.py  state.py
(+205 files in other folders)
