[project]
name = "turnzero"
version = "0.3.1"
description = "Expert Prior injection for AI sessions — eliminates cold-start friction at Turn 0 for any domain"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "TurnZero", email = "hello@turnzero.dev"},
]
keywords = ["ai", "llm", "rag", "prompt-engineering", "mcp", "claude", "context-injection", "expert-priors"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer[all]>=0.12",
    "numpy>=1.26,<2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/turnzero-ai/turnzero"
Repository = "https://github.com/turnzero-ai/turnzero"
Issues = "https://github.com/turnzero-ai/turnzero/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
turnzero = "turnzero.cli:app"
turnzero-mcp = "turnzero.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turnzero"]

[tool.hatch.build.targets.wheel.force-include]
"data/blocks" = "turnzero/data/blocks"
"data/index.jsonl" = "turnzero/data/index.jsonl"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B904", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
